[gd_scene load_steps=5 format=3 uid="uid://co2681xf6dre"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_jdqwj"]
[ext_resource type="Texture2D" uid="uid://cva3wsbyec1c2" path="res://assets/VolumeSprites/Splatcho Volume Slider (1).png" id="2_dxd68"]
[ext_resource type="Script" path="res://scripts/MusicVolume.gd" id="2_w37jq"]
[ext_resource type="Script" path="res://scripts/SFXVolume.gd" id="4_7qqqb"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_jdqwj")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.206377, 0.51016, 0.496183, 0.32549)
metadata/_edit_use_anchors_ = true

[node name="OverWords" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 126
text = "
Game Paused "
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ResumeButton" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 686.0
offset_top = 400.0
offset_right = -686.0
offset_bottom = -510.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 70
text = "RESUME"
metadata/_edit_use_anchors_ = true

[node name="RetryButton" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 686.0
offset_top = 621.0
offset_right = -686.0
offset_bottom = -289.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 70
text = "RETRY"
metadata/_edit_use_anchors_ = true

[node name="HomeButton" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 686.0
offset_top = 839.0
offset_right = -686.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 70
text = "HOME"
metadata/_edit_use_anchors_ = true

[node name="MusicVolume" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 50.0
offset_top = 409.0
offset_right = 90.0
offset_bottom = 449.0
script = ExtResource("2_w37jq")

[node name="SplatchoVolumeSlider" type="Sprite2D" parent="MusicVolume"]
position = Vector2(416, 54)
scale = Vector2(0.194444, 0.194444)
texture = ExtResource("2_dxd68")

[node name="HSlider" type="HSlider" parent="MusicVolume"]
layout_mode = 0
offset_left = 14.0
offset_top = 75.0
offset_right = 500.0
offset_bottom = 181.0
value = 56.0

[node name="MusicLabel" type="Label" parent="MusicVolume"]
layout_mode = 0
offset_left = 47.0
offset_top = 13.0
offset_right = 236.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "MUSIC"

[node name="SFXVolume" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 50.0
offset_top = 631.0
offset_right = 90.0
offset_bottom = 671.0
script = ExtResource("4_7qqqb")

[node name="SplatchoVolumeSlider" type="Sprite2D" parent="SFXVolume"]
position = Vector2(416, 54)
scale = Vector2(0.194444, 0.194444)
texture = ExtResource("2_dxd68")

[node name="HSlider" type="HSlider" parent="SFXVolume"]
layout_mode = 0
offset_left = 14.0
offset_top = 75.0
offset_right = 500.0
offset_bottom = 181.0
value = 56.0

[node name="SFXLabel" type="Label" parent="SFXVolume"]
layout_mode = 0
offset_left = 47.0
offset_top = 13.0
offset_right = 236.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "EFFECTS"

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="value_changed" from="MusicVolume/HSlider" to="MusicVolume" method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="SFXVolume/HSlider" to="SFXVolume" method="_on_h_slider_value_changed"]
